spring MVC - Model

--- a/Spring-08-Spring-MVC-Model/src/main/resources/templates/student/welcome.html
+++ b/Spring-08-Spring-MVC-Model/src/main/resources/templates/student/welcome.html
@@ -10,5 +10,7 @@
 <h2 th:text="${subject}"></h2>
 <h2 th:text="${studentId}"></h2>
 <h2 th:text="${numbers.get(0)}"></h2>
+<h2 th:text="${student.getFirstName}"></h2>
+<h2 th:text="${student.getLastName}"></h2>
 </body>
 </html>
