--- a/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
+++ b/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
@@ -55,6 +55,69 @@ whatever will be visible on the page
 
     </tr>
 </table>
+<p>some text for paragraph</p>
+<br>
+<div>
+
+    <label>Username:</label>
+    <label>
+        <input type="text" name="username" placeholder="enter your username">
+    </label>
+    <br>
+    <label>Password:</label>
+    <label>
+        <input type="password" name="password" placeholder="enter your password">
+    </label>
+    <br>
+    <label>
+        <input type="submit" value="OK">
+    </label>
+    <br>
+</div>
+
+<label>Comment</label>
+<label>
+    <textarea name="comments">  </textarea>
+</label>
+<br>
+<label>Select your gender</label>
+<label>
+    <input type="radio" name="gender" value="male">Male
+    <input type="radio" name="gender" value="female">Female
+    <input type="radio" name="gender" value="other">Other
+    <br>
+    <label>Select your skills:</label>
+    <label>
+        <input type="checkbox" name="course" value="spring">Spring
+        <input type="checkbox" name="course" value="java">Java
+        <input type="checkbox" name="course" value="rest-assured">RestAssured
+    </label>
+</label>
+<br>
+<label>Select your program</label>
+<label>
+    <select>
+        <option value="sdet">SDET</option>
+        <option value="frontend developer">Frontend developer</option>
+        <option value="backend developer" selected>Backend developer</option>
+    </select>
+</label>
+
+<form action="#" method="post"></form>
+<br>
+Firstname: <input type="text" name="firstname">
+<br>
+Firstname: <input type="text" name="lastname">
+<input type="button" value="submit">
+
+
+<div style="background-color: aquamarine">
+    <h3>java developer</h3>
+    <ul>
+        <li>SPRING</li>
+        <li>DATA STRUCTURE</li>
+    </ul>
+</div>
 
 
 </body>
