--- a/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
+++ b/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
@@ -105,9 +105,13 @@ whatever will be visible on the page
 
 <form action="#" method="post"></form>
 <br>
-Firstname: <input type="text" name="firstname">
+Firstname: <label>
+    <input type="text" name="firstname">
+</label>
 <br>
-Firstname: <input type="text" name="lastname">
+Firstname: <label>
+    <input type="text" name="lastname">
+</label>
 <input type="button" value="submit">
 
 
