--- a/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
+++ b/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>HTML Review</title>
     <!--
     container for metadata(is not display on the page
@@ -9,9 +12,36 @@
     -->
 </head>
 <body>
+
 <!--
 whatever will be visible on the page
 -->
+
+<!-- NAVBAR WITH RESPONSIVE TOGGLE -->
+<nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+    <div class="container">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <p>developer course</p>
 <b>bold text</b>
@@ -115,7 +145,7 @@ Firstname: <label>
 <input type="button" value="submit">
 
 
-<div style="background-color: aquamarine">
+<div style="background-color: #9fdeca">
     <h3>java developer</h3>
     <ul>
         <li>SPRING</li>
@@ -123,6 +153,46 @@ Firstname: <label>
     </ul>
 </div>
 
+<table class="table table-hover">
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>John</td>
+        <td>Doe</td>
+        <td>jdoe@gmail.com</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td>Will</td>
+        <td>Johnson</td>
+        <td>will@yahoo.com</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>Shannon</td>
+        <td>Williams</td>
+        <td>shannon@yahoo.com</td>
+    </tr>
+    </tbody>
+</table>
+
+<button class="btn btn-success" type="button">LOGIN</button>
+<h5> <span class="badge text-bg-secondary">New</span></h5>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
