--- a/Spring-08-1-Spring-MVC-Model/src/main/resources/templates/mentor/list.html
+++ b/Spring-08-1-Spring-MVC-Model/src/main/resources/templates/mentor/list.html
@@ -15,26 +15,36 @@
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <td th:text="${mentors.get(0).firstName}"></td>
-        <td th:text="${mentors.get(0).lastName}"></td>
-        <td th:text="${mentors.get(0).age}"></td>
-        <td th:text="${mentors.get(0).gender}"></td>
-    </tr>
-    <tr>
-        <td th:text="${mentors.get(1).firstName}"></td>
-        <td th:text="${mentors.get(1).lastName}"></td>
-        <td th:text="${mentors.get(1).age}"></td>
-        <td th:text="${mentors.get(1).gender}"></td>
-    </tr>
-    <tr>
-        <td th:text="${mentors.get(2).firstName}"></td>
-        <td th:text="${mentors.get(2).lastName}"></td>
-        <td th:text="${mentors.get(2).age}"></td>
-        <td th:text="${mentors.get(2).gender}"></td>
+    <tr th:each="mentor : ${mentors}">
+            <td th:text="${mentor.firstName}"></td>
+            <td th:text="${mentor.lastName}"></td>
+            <td th:text="${mentor.age}"></td>
+            <td th:text="${mentor.gender}"></td>
     </tr>
     </tbody>
+<!--    <tbody>-->
+<!--    <tr>-->
+<!--        <td th:text="${mentors.get(0).firstName}"></td>-->
+<!--        <td th:text="${mentors.get(0).lastName}"></td>-->
+<!--        <td th:text="${mentors.get(0).age}"></td>-->
+<!--        <td th:text="${mentors.get(0).gender}"></td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--        <td th:text="${mentors.get(1).firstName}"></td>-->
+<!--        <td th:text="${mentors.get(1).lastName}"></td>-->
+<!--        <td th:text="${mentors.get(1).age}"></td>-->
+<!--        <td th:text="${mentors.get(1).gender}"></td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--        <td th:text="${mentors.get(2).firstName}"></td>-->
+<!--        <td th:text="${mentors.get(2).lastName}"></td>-->
+<!--        <td th:text="${mentors.get(2).age}"></td>-->
+<!--        <td th:text="${mentors.get(2).gender}"></td>-->
+<!--    </tr>-->
+<!--    </tbody>-->
 </table>
+
+
 
 </body>
 </html>
