--- a/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
+++ b/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
@@ -91,16 +91,16 @@ whatever will be visible on the page
 
     <label>Username:</label>
     <label>
-        <input type="text" name="username" placeholder="enter your username">
+        <input movieType="text" name="username" placeholder="enter your username">
     </label>
     <br>
     <label>Password:</label>
     <label>
-        <input type="password" name="password" placeholder="enter your password">
+        <input movieType="password" name="password" placeholder="enter your password">
     </label>
     <br>
     <label>
-        <input type="submit" value="OK">
+        <input movieType="submit" value="OK">
     </label>
     <br>
 </div>
@@ -112,15 +112,15 @@ whatever will be visible on the page
 <br>
 <label>Select your gender</label>
 <label>
-    <input type="radio" name="gender" value="male">Male
-    <input type="radio" name="gender" value="female">Female
-    <input type="radio" name="gender" value="other">Other
+    <input movieType="radio" name="gender" value="male">Male
+    <input movieType="radio" name="gender" value="female">Female
+    <input movieType="radio" name="gender" value="other">Other
     <br>
     <label>Select your skills:</label>
     <label>
-        <input type="checkbox" name="course" value="spring">Spring
-        <input type="checkbox" name="course" value="java">Java
-        <input type="checkbox" name="course" value="rest-assured">RestAssured
+        <input movieType="checkbox" name="course" value="spring">Spring
+        <input movieType="checkbox" name="course" value="java">Java
+        <input movieType="checkbox" name="course" value="rest-assured">RestAssured
     </label>
 </label>
 <br>
@@ -136,13 +136,13 @@ whatever will be visible on the page
 <form action="#" method="post"></form>
 <br>
 Firstname: <label>
-    <input type="text" name="firstname">
+    <input movieType="text" name="firstname">
 </label>
 <br>
 Firstname: <label>
-    <input type="text" name="lastname">
+    <input movieType="text" name="lastname">
 </label>
-<input type="button" value="submit">
+<input movieType="button" value="submit">
 
 
 <div style="background-color: #9fdeca">
@@ -184,7 +184,7 @@ Firstname: <label>
     </tbody>
 </table>
 
-<button class="btn btn-success" type="button">LOGIN</button>
+<button class="btn btn-success" movieType="button">LOGIN</button>
 <h5> <span class="badge text-bg-secondary">New</span></h5>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
