--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/mentor/register.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/mentor/register.html
@@ -22,30 +22,30 @@
                 <br>
                 <div class="form-group">
                     <label for="firstname">First Name</label>
-                    <input th:field="*{firstName}" type="text" class="form-control" id="firstname">
+                    <input th:field="*{firstName}" movieType="text" class="form-control" id="firstname">
                 </div>
                 <div class="form-group">
                     <label for="lastname">Last Name</label>
-                    <input th:field="*{lastName}" type="text" class="form-control" id="lastname">
+                    <input th:field="*{lastName}" movieType="text" class="form-control" id="lastname">
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input th:field="*{email}" type="email" class="form-control" id="email">
+                    <input th:field="*{email}" movieType="email" class="form-control" id="email">
                 </div>
                 <div class="form-group">
                     <div class="form-check">
-                        <input th:field="*{graduated}" type="checkbox" class="form-check-input" id="graduated">
+                        <input th:field="*{graduated}" movieType="checkbox" class="form-check-input" id="graduated">
                         <label class="form-check-label" for="graduated">Graduated</label>
                     </div>
                 </div>
                 <div class="form-group">
                     <label>Gender</label><br>
                     <div class="form-check form-check-inline">
-                        <input th:field="*{gender}" type="radio" class="form-check-input" value="male" id="gender-male">
+                        <input th:field="*{gender}" movieType="radio" class="form-check-input" value="male" id="gender-male">
                         <label class="form-check-label" for="gender-male">Male</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input th:field="*{gender}" type="radio" class="form-check-input" value="female" id="gender-female">
+                        <input th:field="*{gender}" movieType="radio" class="form-check-input" value="female" id="gender-female">
                         <label class="form-check-label" for="gender-female">Female</label>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                     <label for="company">Company</label>
                     <textarea th:field="*{company}" class="form-control" id="company"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button movieType="submit" class="btn btn-primary">Register</button>
             </form>
         </div>
     </div>
